--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -5,7 +5,14 @@ header.header
         img(src=(settings.logo || "/img/enaBday.jpg") height="100px" width="100px" class="header-img")
     .right
       ul.nav-list
-        li.nav-item
-          a(href="/") Trang chủ
-        li.nav-item
-          a(href="/")  Trang chủ đề     
+        div
+          li.nav-item
+            a(href="/") Trang chủ
+          li.nav-item
+            a(href="/topics")  Chủ đề
+        div
+          li.nav-item
+            a(href="/users/register")  Đăng kí 
+          li.nav-item
+            a(href="/users/login")  Đăng nhập 
+        
